--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -6,14 +6,14 @@ jobs:
     steps:
       - name: Display Information
         run: |
-          "Event name: ${{ github.event_name }}"
-          "Ref: ${{ github.ref }}"
-          "SHA: ${{ github.sha }}"
-          "Actor: ${{ github.actor }}"
-          "Workflow: ${{ github.workflow }}"
-          "Run ID: ${{ github.run_id }}"
-          "Run Number: ${{ github.run_number }}"
+          echo "Event name: ${{ github.event_name }}"
+          echo "Ref: ${{ github.ref }}"
+          echo "SHA: ${{ github.sha }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "Workflow: ${{ github.workflow }}"
+          echo "Run ID: ${{ github.run_id }}"
+          echo "Run Number: ${{ github.run_number }}"
       - name: Retrieve Variable
         run: |
-          "${{ vars.MY_VAR }}"
+          echo "${{ vars.MY_VAR }}"
   
