--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -10,8 +10,22 @@ jobs:
   echo:
     runs-on: ubuntu-latest
     steps:
-      - name: ${{ inputs.debug }} Print when triggered from main
+      - name: "[${{ inputs.debug }}] Print start-up data"
         # Execute the run command if debug variable is set to true
         if: inputs.debug == true
-        run: echo "I was triggered from main"
+        run: |
+          echo "Triggered by: ${{ github.event_name }}"
+          echo "Branch ${{ github.ref }}"
+          echo "Commit SHA ${{ github.sha }}"
+          echo "Runner OS $RUNNER_OS"
+      - name: "[${{ inputs.debug }}] Print when triggered from main"
+        # Execute the run command if debug variable is set to true
+        # and triggered from main branch
+        if: inputs.debug == true && github.ref_name == 'main'
+        run: |
+          echo "I was triggered from main"
+      - name: Greeting
+        run: echo "Hello, world"
+
+
 
