--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,4 +1,5 @@
 name: 07-using-expressions
+run-name: "07 - Using expressions | DEBUG - ${{ inputs.debug == true && 'on' || 'off' }} "
 on:
   push:
   workflow_dispatch:
