--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -13,4 +13,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "Print env variables"
-        run: echo ""
+        env:
+          STEP_VAR: "I am a step env var"
+          STEP_VAR2: "I am another step var"
+        run: |
+          echo "Step env var ${{ env.STEP_VAR }}"
+          echo "Step env var ${{ env.STEP_VAR2 }}"
+          echo "Job env var ${{ env.JOB_VAR }}"
+          echo "Workflow env var: ${{ env.WORKFLOW_VAR }}"
+          echo "Overwritten: ${{ env.OVERWRITTEN }}"
+      - name: "Overwrite Job variable"
+        env:
+          OVERWRITTEN: "I have been overwritten at the step level"
+        run:
+          echo "Step env var ${{ env.OVERWRITTEN }}"
+          
+
