--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -1,6 +1,5 @@
 name: 08-variables
 on:
-  push:
   workflow_dispatch:
 env:
   WORKFLOW_VAR: "I am a workflow env var"
@@ -21,11 +20,11 @@ jobs:
           echo "Step env var ${{ env.STEP_VAR2 }}"
           echo "Job env var ${{ env.JOB_VAR }}"
           echo "Workflow env var: ${{ env.WORKFLOW_VAR }}"
-          echo "Overwritten: ${{ env.OVERWRITTEN }}"
+          echo "Overwritten ${{ env.OVERWRITTEN }}"
       - name: "Overwrite Job variable"
         env:
           OVERWRITTEN: "I have been overwritten at the step level"
         run:
           echo "Step env var ${{ env.OVERWRITTEN }}"
-          
+
 
