--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -4,6 +4,7 @@ on:
 env:
   WORKFLOW_VAR: "I am a workflow env var"
   OVERWRITTEN: "I will be overwritten"
+  UNDEFINED_VAR_WITH_DEFAULT: ${{ vars.UNDEFINED_VAR || 'default value' }}
 jobs:
   echo:
     env:
@@ -26,5 +27,22 @@ jobs:
           OVERWRITTEN: "I have been overwritten at the step level"
         run:
           echo "Step env var ${{ env.OVERWRITTEN }}"
-
-
+  echo2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print variables
+        run: |
+          echo "Repo var ${{ vars.REPOSITORY_VAR }}"
+  echo-prod:
+    runs-on: ubuntu-latest
+    environment: prod
+    steps:
+      - name: Print Prod variables
+        run: |
+          echo "Repo var ${{ vars.TARGET_VAR }}"
+  echo-undefined:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print undefined variables
+        run: |
+          echo "Undefined var ${{ env.UNDEFINED_VAR_WITH_DEFAULT }}"
